# ChangeLog for kde-base/kdemultimedia-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-meta/ChangeLog,v 1.198 2011/12/18 19:46:34 dilfridge Exp $

  18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdemultimedia-meta-4.6.5.ebuild:
  Drop KDE 4.6.5

*kdemultimedia-meta-4.7.4 (11 Dec 2011)

  11 Dec 2011; Alexey Shvetsov <alexxy@gentoo.org>
  +kdemultimedia-meta-4.7.4.ebuild:
  Version bump KDE SC 4.7.4

  07 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdemultimedia-meta-4.7.2.ebuild:
  Drop KDE 4.7.2

  07 Dec 2011; Markos Chandras <hwoarang@gentoo.org>
  kdemultimedia-meta-4.7.3.ebuild:
  Stable on amd64 wrt bug #388279

  07 Dec 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  kdemultimedia-meta-4.7.3.ebuild:
  x86 stable wrt bug #388279

*kdemultimedia-meta-4.7.3 (02 Nov 2011)

  02 Nov 2011; Alexey Shvetsov <alexxy@gentoo.org>
  +kdemultimedia-meta-4.7.3.ebuild:
  Version bump KDE SC 4.7.3

  28 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdemultimedia-meta-4.7.1.ebuild:
  Drop KDEpim 4.6.1 and KDE 4.7.1

  15 Oct 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdemultimedia-meta-4.7.0.ebuild:
  Drop KDE 4.7.0

*kdemultimedia-meta-4.7.2 (06 Oct 2011)

  06 Oct 2011; Alexey Shvetsov <alexxy@gentoo.org>
  +kdemultimedia-meta-4.7.2.ebuild:
  Version bump KDE SC 4.7.2

*kdemultimedia-meta-4.7.1 (07 Sep 2011)

  07 Sep 2011; Alexey Shvetsov <alexxy@gentoo.org>
  +kdemultimedia-meta-4.7.1.ebuild:
  Version bump KDE SC 4.7.1

  15 Aug 2011; Markus Meier <maekke@gentoo.org>
  kdemultimedia-meta-4.6.5.ebuild:
  x86 stable, bug #377465

  12 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  -kdemultimedia-meta-4.6.4.ebuild:
  Drop KDE 4.6.4

  09 Aug 2011; Markos Chandras <hwoarang@gentoo.org>
  kdemultimedia-meta-4.6.5.ebuild:
  Stable on amd64 wrt bug #377465

*kdemultimedia-meta-4.7.0 (27 Jul 2011)

  27 Jul 2011; Alexey Shvetsov <alexxy@gentoo.org>