@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdemultimedia-meta
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-meta/ChangeLog,v 1.198 2011/12/18 19:46:34 dilfridge Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-meta/ChangeLog,v 1.199 2012/01/09 16:19:29 phajdan.jr Exp $
+
+  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  kdemultimedia-meta-4.7.4.ebuild:
+  x86 stable wrt bug #396359
 
   18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org>
   -kdemultimedia-meta-4.6.5.ebuild:
